--- a/Components/Banner.html
+++ b/Components/Banner.html
@@ -1,1 +1,1 @@
-<img class="banner-img" src="<%= YUE.staticConf.staticPath %>/2018/00000000/images/ecy_icon.png">
+<img class="banner-img" src="test/2018/00000000/images/icon.png">
